// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. a primary image 1`] = `
.c6 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 25px;
}

.c7 {
  position: fixed;
  bottom: -100%;
  left: 0;
  right: 0;
  color: white;
  background-color: white;
  padding-top: 12px;
  padding-bottom: 24px;
  text-align: center;
  z-index: 1000;
  border-top: 1px solid #696969;
  -webkit-transition: bottom 1s ease-in-out;
  transition: bottom 1s ease-in-out;
}

.c16 {
  font-family: TimesModern-Regular,TimesModern-Regular-fallback,serif;
  font-size: 20px;
  color: #01000d;
  font-weight: 400;
  text-align: left;
  padding-left: 16px;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11 {
  font-family: Roboto-Regular,Roboto-Regular-fallback,sans-serif;
  font-size: 14px;
  font-weight: 600;
  color: #007A3F;
  line-height: 21px;
}

.c13 {
  font-family: Roboto-Regular,Roboto-Regular-fallback,sans-serif;
  font-size: 14px;
  font-weight: 600;
  color: #696969;
  line-height: 21px;
}

.c15 {
  width: 40px;
  height: 40px;
  border-radius: 50%;
}

.c8 {
  width: 336px;
  height: 74px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0px 16px;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding-top: 10px;
}

.c12 {
  width: 1px;
  height: 12px;
  margin-left: 6px;
  margin-right: 6px;
  color: #e4e4e4;
}

.c2 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 1;
}

.c2 > .c17 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c3 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c4 {
  position: relative;
}

.c0 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  box-sizing: content-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  padding-top: 10px;
  padding-bottom: 10px;
}

@media (min-width:768px) {
  .c6 {
    width: 80.8%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c6 {
    width: 56.2%;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c5 {
    margin-top: 0;
    -webkit-transition: margin-top 0.2s ease;
    transition: margin-top 0.2s ease;
  }
}

@media (min-width:768px) {
  .c0 {
    min-height: 90px;
  }
}

@media (min-width:970px) {
  .c0 {
    min-height: 250px;
  }
}

<div>
  <div />
  <article>
    <Head />
    <div
      className="c0"
    >
      <AdContainer
        marginBottom={0}
      />
    </div>
    <main
      className="c1"
    >
      <div
        className="c2"
      />
      <article
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div>
              <div>
                <div
                  className="c6"
                >
                  <ArticleImage />
                </div>
              </div>
            </div>
            <div />
          </div>
        </div>
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
    <div
      className="c7"
    >
      <div
        className="c8"
      >
        <div
          className="c9"
        >
          <div
            className="c10"
          >
            <span
              className="c11"
            >
              HAVE YOUR SAY
            </span>
            <hr
              className="c12"
            />
            <span
              className="c13"
            >
              89 RECENTLY COMMENTED
            </span>
          </div>
          <div
            className="c14"
          >
            <img
              className="c15"
            />
            <span
              className="c16"
            >
              'Change has begun': Starmer gives first conference speech
            </span>
          </div>
        </div>
      </div>
    </div>
  </article>
</div>
`;

exports[`2. a fullwidth image 1`] = `
.c6 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  padding-bottom: 20px;
}

.c7 {
  position: fixed;
  bottom: -100%;
  left: 0;
  right: 0;
  color: white;
  background-color: white;
  padding-top: 12px;
  padding-bottom: 24px;
  text-align: center;
  z-index: 1000;
  border-top: 1px solid #696969;
  -webkit-transition: bottom 1s ease-in-out;
  transition: bottom 1s ease-in-out;
}

.c16 {
  font-family: TimesModern-Regular,TimesModern-Regular-fallback,serif;
  font-size: 20px;
  color: #01000d;
  font-weight: 400;
  text-align: left;
  padding-left: 16px;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11 {
  font-family: Roboto-Regular,Roboto-Regular-fallback,sans-serif;
  font-size: 14px;
  font-weight: 600;
  color: #007A3F;
  line-height: 21px;
}

.c13 {
  font-family: Roboto-Regular,Roboto-Regular-fallback,sans-serif;
  font-size: 14px;
  font-weight: 600;
  color: #696969;
  line-height: 21px;
}

.c15 {
  width: 40px;
  height: 40px;
  border-radius: 50%;
}

.c8 {
  width: 336px;
  height: 74px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0px 16px;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding-top: 10px;
}

.c12 {
  width: 1px;
  height: 12px;
  margin-left: 6px;
  margin-right: 6px;
  color: #e4e4e4;
}

.c2 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 1;
}

.c2 > .c17 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c3 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c4 {
  position: relative;
}

.c0 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  box-sizing: content-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  padding-top: 10px;
  padding-bottom: 10px;
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c5 {
    margin-top: 0;
    -webkit-transition: margin-top 0.2s ease;
    transition: margin-top 0.2s ease;
  }
}

@media (min-width:768px) {
  .c0 {
    min-height: 90px;
  }
}

@media (min-width:970px) {
  .c0 {
    min-height: 250px;
  }
}

<div>
  <div />
  <article>
    <Head />
    <div
      className="c0"
    >
      <AdContainer
        marginBottom={0}
      />
    </div>
    <main
      className="c1"
    >
      <div
        className="c2"
      />
      <article
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div>
              <div>
                <div
                  className="c6"
                >
                  <ArticleImage />
                </div>
              </div>
            </div>
            <div />
          </div>
        </div>
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
    <div
      className="c7"
    >
      <div
        className="c8"
      >
        <div
          className="c9"
        >
          <div
            className="c10"
          >
            <span
              className="c11"
            >
              HAVE YOUR SAY
            </span>
            <hr
              className="c12"
            />
            <span
              className="c13"
            >
              89 RECENTLY COMMENTED
            </span>
          </div>
          <div
            className="c14"
          >
            <img
              className="c15"
            />
            <span
              className="c16"
            >
              'Change has begun': Starmer gives first conference speech
            </span>
          </div>
        </div>
      </div>
    </div>
  </article>
</div>
`;

exports[`3. a secondary image 1`] = `
.c6 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 25px;
}

.c7 {
  position: fixed;
  bottom: -100%;
  left: 0;
  right: 0;
  color: white;
  background-color: white;
  padding-top: 12px;
  padding-bottom: 24px;
  text-align: center;
  z-index: 1000;
  border-top: 1px solid #696969;
  -webkit-transition: bottom 1s ease-in-out;
  transition: bottom 1s ease-in-out;
}

.c16 {
  font-family: TimesModern-Regular,TimesModern-Regular-fallback,serif;
  font-size: 20px;
  color: #01000d;
  font-weight: 400;
  text-align: left;
  padding-left: 16px;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11 {
  font-family: Roboto-Regular,Roboto-Regular-fallback,sans-serif;
  font-size: 14px;
  font-weight: 600;
  color: #007A3F;
  line-height: 21px;
}

.c13 {
  font-family: Roboto-Regular,Roboto-Regular-fallback,sans-serif;
  font-size: 14px;
  font-weight: 600;
  color: #696969;
  line-height: 21px;
}

.c15 {
  width: 40px;
  height: 40px;
  border-radius: 50%;
}

.c8 {
  width: 336px;
  height: 74px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0px 16px;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding-top: 10px;
}

.c12 {
  width: 1px;
  height: 12px;
  margin-left: 6px;
  margin-right: 6px;
  color: #e4e4e4;
}

.c2 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 1;
}

.c2 > .c17 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c3 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c4 {
  position: relative;
}

.c0 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  box-sizing: content-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  padding-top: 10px;
  padding-bottom: 10px;
}

@media (min-width:768px) {
  .c6 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c6 {
    width: 56.2%;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c5 {
    margin-top: 0;
    -webkit-transition: margin-top 0.2s ease;
    transition: margin-top 0.2s ease;
  }
}

@media (min-width:768px) {
  .c0 {
    min-height: 90px;
  }
}

@media (min-width:970px) {
  .c0 {
    min-height: 250px;
  }
}

<div>
  <div />
  <article>
    <Head />
    <div
      className="c0"
    >
      <AdContainer
        marginBottom={0}
      />
    </div>
    <main
      className="c1"
    >
      <div
        className="c2"
      />
      <article
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div>
              <div>
                <div
                  className="c6"
                >
                  <ArticleImage />
                </div>
              </div>
            </div>
            <div />
          </div>
        </div>
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
    <div
      className="c7"
    >
      <div
        className="c8"
      >
        <div
          className="c9"
        >
          <div
            className="c10"
          >
            <span
              className="c11"
            >
              HAVE YOUR SAY
            </span>
            <hr
              className="c12"
            />
            <span
              className="c13"
            >
              89 RECENTLY COMMENTED
            </span>
          </div>
          <div
            className="c14"
          >
            <img
              className="c15"
            />
            <span
              className="c16"
            >
              'Change has begun': Starmer gives first conference speech
            </span>
          </div>
        </div>
      </div>
    </div>
  </article>
</div>
`;

exports[`4. an inline image 1`] = `
.c6 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 0;
  display: block;
}

.c7 {
  position: fixed;
  bottom: -100%;
  left: 0;
  right: 0;
  color: white;
  background-color: white;
  padding-top: 12px;
  padding-bottom: 24px;
  text-align: center;
  z-index: 1000;
  border-top: 1px solid #696969;
  -webkit-transition: bottom 1s ease-in-out;
  transition: bottom 1s ease-in-out;
}

.c16 {
  font-family: TimesModern-Regular,TimesModern-Regular-fallback,serif;
  font-size: 20px;
  color: #01000d;
  font-weight: 400;
  text-align: left;
  padding-left: 16px;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11 {
  font-family: Roboto-Regular,Roboto-Regular-fallback,sans-serif;
  font-size: 14px;
  font-weight: 600;
  color: #007A3F;
  line-height: 21px;
}

.c13 {
  font-family: Roboto-Regular,Roboto-Regular-fallback,sans-serif;
  font-size: 14px;
  font-weight: 600;
  color: #696969;
  line-height: 21px;
}

.c15 {
  width: 40px;
  height: 40px;
  border-radius: 50%;
}

.c8 {
  width: 336px;
  height: 74px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0px 16px;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding-top: 10px;
}

.c12 {
  width: 1px;
  height: 12px;
  margin-left: 6px;
  margin-right: 6px;
  color: #e4e4e4;
}

.c2 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 1;
}

.c2 > .c17 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c3 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c4 {
  position: relative;
}

.c0 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  box-sizing: content-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  padding-top: 10px;
  padding-bottom: 10px;
}

@media (min-width:768px) {
  .c6 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c6 {
    width: 56.2%;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c5 {
    margin-top: 0;
    -webkit-transition: margin-top 0.2s ease;
    transition: margin-top 0.2s ease;
  }
}

@media (min-width:768px) {
  .c0 {
    min-height: 90px;
  }
}

@media (min-width:970px) {
  .c0 {
    min-height: 250px;
  }
}

<div>
  <div />
  <article>
    <Head />
    <div
      className="c0"
    >
      <AdContainer
        marginBottom={0}
      />
    </div>
    <main
      className="c1"
    >
      <div
        className="c2"
      />
      <article
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div>
              <div>
                <div
                  className="c6"
                >
                  <ArticleImage />
                </div>
              </div>
            </div>
            <div />
          </div>
        </div>
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
    <div
      className="c7"
    >
      <div
        className="c8"
      >
        <div
          className="c9"
        >
          <div
            className="c10"
          >
            <span
              className="c11"
            >
              HAVE YOUR SAY
            </span>
            <hr
              className="c12"
            />
            <span
              className="c13"
            >
              89 RECENTLY COMMENTED
            </span>
          </div>
          <div
            className="c14"
          >
            <img
              className="c15"
            />
            <span
              className="c16"
            >
              'Change has begun': Starmer gives first conference speech
            </span>
          </div>
        </div>
      </div>
    </div>
  </article>
</div>
`;
